--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
               />
 
               <div class="personal">
-                <h3 class="header-trzy">Mark Guerrero</h3>
-                <p class="pee">Product Designer</p>
+                <h3 class="header-trzy-name">Mark Guerrero</h3>
+                <p class="pee-1">Product Designer</p>
                 <ul class="member-socials">
                   <li class="member-socials-list-element">
                     <a
@@ -138,9 +138,7 @@
                         width="16"
                         height="16"
                       >
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -170,9 +168,7 @@
                         width="16"
                         height="16"
                       >
-                        <use
-                          href="./images/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -187,9 +183,7 @@
                         width="16"
                         height="16"
                       >
-                        <use
-                          href="./images/icons.svg#icon-linkedin2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin2"></use>
                       </svg>
                     </a>
                   </li>
@@ -200,8 +194,8 @@
               <img src="./images/Tom.jpg" alt="Tom" width="264" height="260" />
 
               <div class="personal">
-                <h3 class="header-trzy">Tom Ford</h3>
-                <p class="pee">Frontend Developer</p>
+                <h3 class="header-trzy-name">Tom Ford</h3>
+                <p class="pee-1">Frontend Developer</p>
                 <ul class="member-socials">
                   <li class="member-socials-list-element">
                     <a
@@ -214,9 +208,7 @@
                         width="16"
                         height="16"
                       >
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -246,9 +238,7 @@
                         width="16"
                         height="16"
                       >
-                        <use
-                          href="./images/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -263,9 +253,7 @@
                         width="16"
                         height="16"
                       >
-                        <use
-                          href="./images/icons.svg#icon-linkedin2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin2"></use>
                       </svg>
                     </a>
                   </li>
@@ -280,8 +268,8 @@
                 height="260"
               />
               <div class="personal">
-                <h3 class="header-trzy">Camila Garcia</h3>
-                <p class="pee">Marketing</p>
+                <h3 class="header-trzy-name">Camila Garcia</h3>
+                <p class="pee-1">Marketing</p>
                 <ul class="member-socials">
                   <li class="member-socials-list-element">
                     <a
@@ -294,9 +282,7 @@
                         width="16"
                         height="16"
                       >
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -326,9 +312,7 @@
                         width="16"
                         height="16"
                       >
-                        <use
-                          href="./images/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -343,9 +327,7 @@
                         width="16"
                         height="16"
                       >
-                        <use
-                          href="./images/icons.svg#icon-linkedin2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin2"></use>
                       </svg>
                     </a>
                   </li>
@@ -360,8 +342,8 @@
                 height="260"
               />
               <div class="personal">
-                <h3 class="header-trzy">Daniel Wilson</h3>
-                <p class="pee">UI Designer</p>
+                <h3 class="header-trzy-name">Daniel Wilson</h3>
+                <p class="pee-1">UI Designer</p>
                 <ul class="member-socials">
                   <li class="member-socials-list-element">
                     <a
@@ -374,9 +356,7 @@
                         width="16"
                         height="16"
                       >
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -406,9 +386,7 @@
                         width="16"
                         height="16"
                       >
-                        <use
-                          href="./images/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -423,9 +401,7 @@
                         width="16"
                         height="16"
                       >
-                        <use
-                          href="./images/icons.svg#icon-linkedin2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin2"></use>
                       </svg>
                     </a>
                   </li>
@@ -585,7 +561,7 @@
                 target="_blank"
               >
                 <svg class="footer-social-link-icon" width="24" height="24">
-                  <use href="./images/SVG-ikony.svg#instagram.svg"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -596,7 +572,7 @@
                 target="_blank"
               >
                 <svg class="footer-social-link-icon" width="24" height="24">
-                  <use href="./images/SVG-ikony.svg#twitter.svg"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -607,7 +583,7 @@
                 target="_blank"
               >
                 <svg class="footer-social-link-icon" width="24" height="24">
-                  <use href="./images/SVG-ikony.svg#facebook.svg"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -618,7 +594,7 @@
                 target="_blank"
               >
                 <svg class="footer-social-link-icon" width="24" height="24">
-                  <use href="./images/SVG-ikony.svg#linkedin2.svg"></use>
+                  <use href="./images/icons.svg#icon-linkedin2"></use>
                 </svg>
               </a>
             </li>
