--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li class="lis-dwa">
               <div class="icon-box">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
 
